# PurgePack

./: Cargo.toml  PurgePack.code-workspace  README.md  build.bat  build.sh  build_debug.bat  build_release.bat
.cargo/: config.toml
.github/workflows/: rust.yml  rust_linux.yml  rust_windows.yml
delta_module/: Cargo.toml
delta_module/src/: cli_parse.rs  lib.rs
huffman_module/: Cargo.toml
huffman_module/src/: lib.rs
purgepack/: Cargo.toml
purgepack/src/: main.rs
rls_module/: Cargo.toml
rls_module/src/: cli_parse.rs  lib.rs
shared_files/: Cargo.toml
shared_files/src/: core_header.rs  lib.rs  stats.rs
test_module/: Cargo.toml
test_module/src/: lib.rs
