[package]
name = "purgepack"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = "2.12.0"
libloading = "0.9.0"
shared_files = { path = "../shared_files" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Foundation"
]}
